상담원 채팅연결 추가

--- a/src/adminRoomList.html
+++ b/src/adminRoomList.html
@@ -22,7 +22,7 @@
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="js/adminChat.js"></script>
+    <script src="js/adminRoomList.js"></script>
 </body>
 
 </html>
