--- a/src/adminRoomList.html
+++ b/src/adminRoomList.html
@@ -7,18 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin</title>
     <link rel="stylesheet" href="css/adminStyle.css">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </head>
-<script>
-let pushChk = Notification.permission;
-</script>
-
 <body>
     <div class="wrap">
         <div class="admin-header">
             <h1>상담챗 목록</h1>
         </div>
         <div>
-            <input type="checkbox" checked data-toggle="toggle" data-onstyle="primary"> 상담방 생성 알림
+            <div class="form-check form-switch">
+                <input class="form-check-input" id="alarm" type="checkbox" role="switch" id="flexSwitchCheckDefault" >
+                <label class="form-check-label" for="flexSwitchCheckDefault">새로운 상담리스트 알림여부</label>
+              </div>
         </div>
         <div class="admin-container">
             <ul class="room-list">
