--- a/src/index.html
+++ b/src/index.html
@@ -4,34 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="https://cdn.jsdelivr.net/npm/@joeattardi/emoji-button@3.0.3/dist/index.min.js"></script>
-    <script src="https://kit.fontawesome.com/2974b90d21.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/mainStyle.css">
+    
 </head>
 <body>
     <div class="wrap">
-        <div class="user-container">
-            <label for="nickname">대화명</label>
-            <input type="text" id="nickname"/>
+        <div class="head">
+            <h1>상담챗</h1>
+        </div>
+        <div id="chat-button" class="chat-button">
+            <button id="consultBtn">1:1문의하기</button>
         </div>
 
-        <div class="display-container">
-            <ul class="chatting-list">
-                
-            </ul>
-        </div>
-
-        <div class="input-container">
-            <span>
-                <input type="text" class="chatting-input"/>
-                <button id="emoji_btn"><i class="fa-regular fa-face-smile fa-2xl" style="color: #ffe747;"></i></button>
-                <button class="send-button">전송</button>
-            </span>    
+        <!-- 채팅 창 -->
+        <div id="chatContainer" class="chat-container hidden">
+            <button id="closeChat">&times;</button>
+            <iframe id="chatContent" src="">
+                <!-- 여기에 user.html이 로드됩니다. -->
+            </iframe>
         </div>
     </div>
-
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="js/chat.js"></script>
-    <script src="js/emoji.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
