상담사 채팅종료 버튼 UI  추가

--- a/src/adminChat.html
+++ b/src/adminChat.html
@@ -11,6 +11,10 @@
 <body>
     <div class="wrap">
         <div class="display-container">
+            <div class="user-container">
+                <button>상담종료</button>
+            </div>
+
             <ul class="chatting-list">
                 
             </ul>
