사용자 채팅종료 기능 추가

--- a/src/user.html
+++ b/src/user.html
@@ -13,6 +13,7 @@
         <div class="user-container">
             <label for="nickname">대화명</label>
             <input type="text" id="nickname"/>
+            <button id="endChat">채팅 종료</button>
         </div>
 
         <div class="display-container">
