사용자 채팅 팝업 스타일 변경

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         <!-- 채팅 창 -->
         <div id="chatContainer" class="chat-container hidden">
             <button id="closeChat">&times;</button>
-            <iframe id="chatContent" src="">
+            <iframe id="chatContent" src="" class="chatContentStyle">
                 <!-- 여기에 user.html이 로드됩니다. -->
             </iframe>
         </div>
